WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
20551
[GTK] curl and search popup crashers
https://bugs.webkit.org/show_bug.cgi?id=20551
Summary
[GTK] curl and search popup crashers
Alp Toker
Reported
2008-08-27 16:39:16 PDT
Some crashers we found during testing: These tests crash due to a curl http backend bug: Test: fast/dom/clientWidthAfterDocumentIsRemoved.html Test: fast/encoding/char-encoding.html SearchPopupMenu crashes because it's enabled when the feature isn't yet supported in the GTK+ port. Fix attached.
Attachments
Fix crashers
(2.07 KB, patch)
2008-08-27 16:48 PDT
,
Alp Toker
eric
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alp Toker
Comment 1
2008-08-27 16:48:48 PDT
Created
attachment 23045
[details]
Fix crashers Feel free to land this after review.
Mark Rowe (bdash)
Comment 2
2008-08-27 16:54:12 PDT
I don't see any reason that fixes for two unrelated crashes should be part of the same change.
Eric Seidel (no email)
Comment 3
2008-08-27 17:06:05 PDT
Comment on
attachment 23045
[details]
Fix crashers r=me
Holger Freyther
Comment 4
2008-08-27 19:19:05 PDT
Landed in
r35960
and
r35961
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug