2008-08-27  Alp Toker  <alp@nuanti.com>

Reviewed by Eric.

        https://bugs.webkit.org/show_bug.cgi?id=20551
        [GTK] curl crashers

        * platform/network/curl/ResourceHandleManager.cpp:
        (WebCore::ResourceHandleManager::startScheduledJobs):
        Remove the resource handle from the pending list before starting the
        job, not afterwards. Fixes crashers in the test suite.

        Test: fast/dom/clientWidthAfterDocumentIsRemoved.html
        Test: fast/encoding/char-encoding.html


Canonical link: https://commits.webkit.org/28363@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@35960 268f45cc-cd09-0410-ab3c-d52691b4dbfc