third_party/WebKit/WebCore/platform/gtk/SearchPopupMenuGtk.cpp
@@ -41,7 +41,7 @@ void SearchPopupMenu::loadRecentSearches(const AtomicString&, Vector<String>&)
 bool SearchPopupMenu::enabled()
 {
     notImplemented();
-    return true;
+    return false;
 }
 
 }
